fix/bug: Ajuste Mobile, Refact, Filter, Pagination

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-sennatech text-muted">
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+  <section class="d-flex justify-content-center text-start justify-content-lg-between p-4 border-bottom">
     <div class="container d-lg-block">
       <span class="preFooter">Gostou? <a href="" class="preFooter__link">Fale conosco.</a></span>
     </div>
@@ -9,7 +9,7 @@
     <div class="container text-center text-md-start mt-5">
       <div class="row mt-3">
         <div class="col-md-3 col-lg-4 col-xl-4 mb-4">
-          <h6 class="text-uppercase fw-bold mb-4">
+          <h6 class="text-uppercase text-start fw-bold mb-4">
             <img src="../../../assets/images/sennatech_branco.png"/>
           </h6>
           <p class="footerAdress">
@@ -17,7 +17,7 @@
           </p>
         </div>
         <div class="col-md-4 col-lg-3 col-xl-3 ms-auto mb-md-0 mb-4 socialMedia">
-          <div class="text-end iconFooter">
+          <div class="text-lg-end iconFooter">
             <a href="" class="me-5 text-reset">
               <i class="bi bi-linkedin"></i>
             </a>
@@ -37,7 +37,7 @@
   </section>
 
   <!-- Copyright -->
-  <div class="container text-center p-4 footerCopy">
+  <div class="container p-4 footerCopy">
     © 2023 Sennatech Consultoria.
   </div>
   <!-- Copyright -->
