--- a/src/app/components/shared/pagination/pagination.component.html
+++ b/src/app/components/shared/pagination/pagination.component.html
@@ -1,5 +1,5 @@
 <nav aria-label="Page navigation example">
-  <ul class="pagination">
+  <ul class="custom-pagination">
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
