--- a/src/app/pages/cases/cases.component.html
+++ b/src/app/pages/cases/cases.component.html
@@ -7,8 +7,8 @@
     <span>nossa experiência.</span>
   </h3>
   <div class="row mb-3">
-    <div class="filter">
-      <p>Mais recentes  <span>|  Mais Relevantes</span></p>
+    <div class="cases__filter">
+      <app-custom-filter></app-custom-filter>
     </div>
   </div>
   <div class="row mb-5 ">
