--- a/src/app/pages/parceiros/parceiros.component.html
+++ b/src/app/pages/parceiros/parceiros.component.html
@@ -17,7 +17,7 @@
           <p class="parceiros__text">Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA) em ambientes de nuvem híbrida, multinuvem e IoT.</p>
         </div>
         <div class="parceiros">
-          <a href="#linkparceiro">
+          <a href="#">
             <p class="parceiros__link">Saiba mais<i class="bi bi-arrow-up-right"></i></p>
           </a>
         </div>
@@ -30,7 +30,7 @@
           <p class="parceiros__text">Descubram, priorizem, mitiguem e corrijam automaticamente os riscos de acesso à infraestrutura de nuvem.</p>
         </div>
         <div class="parceiros">
-          <a href="#linkparceiro">
+          <a href="#">
             <p class="parceiros__link">Saiba mais<i class="bi bi-arrow-up-right"></i></p>
           </a>
         </div>
@@ -50,7 +50,7 @@
           <p class="parceiros__text">A Wib API oferece visibilidade contínua em todo o ciclo de vida da API, desde o código até o teste e a produção.</p>
         </div>
         <div class="parceiros">
-          <a href="#linkparceiro">
+          <a href="#">
             <p class="parceiros__link">Saiba mais<i class="bi bi-arrow-up-right"></i></p>
           </a>
         </div>
