--- a/src/app/pages/vaga/vaga.component.html
+++ b/src/app/pages/vaga/vaga.component.html
@@ -54,23 +54,23 @@
             </p>
           </div>
         </div>
-        <div class="vaga__socialMedia mt-5 mb-5">
+        <div class="vaga__socialMedia mt-lg-5 mt-3 mb-lg-5 mb-2 ">
           <span class="me-5 itens">Compartilhar</span>
-          <a href="" class="me-5 text-reset">
+          <a href="" class="me-lg-5 me-3 text-reset">
             <i class="bi bi-linkedin fs-7"></i>
           </a>
-          <a href="" class="me-5 text-reset">
+          <a href="" class="me-lg-5 me-3 text-reset">
             <i class="bi bi-instagram fs-7"></i>
           </a>
-          <a href="" class="me-5 text-reset">
+          <a href="" class="me-lg-5 me-3 text-reset">
             <i class="bi bi-facebook fs-7"></i>
           </a>
-          <a href="" class="me-4 text-reset">
+          <a href="" class="me-lg-4 me-3 text-reset">
             <i class="bi bi-whatsapp fs-7"></i>
           </a>
         </div>
-        <button class="btnLight ms-5" type="submit">
-          <p class="btnText">Inscrever-se</p>
+        <button class="btnLight ms-lg-5 ms-0 mb-lg-0 mb-5 mt-lg-0 mt-3">
+         <a routerLink="./inscricao" class="text-decoration-none"><p class="btnText">Inscrever-se</p></a>
         </button>
         <div class="row">
           <div class="btnDiv my-3">
