--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -28,7 +28,14 @@
   font-weight: 300;
   font-size: 12px;
   line-height: 153.52%;
-  text-align: right!important;
+  @media screen and (min-width:320px) {
+    text-align: left!important;
+  }
+
+  @media screen and (min-width: 992px) {
+    text-align: right!important;
+  }
+
   color: #B6B6B6;
 }
 
