--- a/src/app/components/shared/carousel/carousel.component.html
+++ b/src/app/components/shared/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" >
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button"  data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
@@ -56,3 +56,27 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<!-- <div class="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item" [class.active]="currentIndex === i" *ngFor="let item of items; let i = index">
+      <img [src]="item.image" [alt]="item.title" width="100%">
+      <div class="carousel-caption">
+        <h5>{{item.title}}</h5>
+        <p>{{item.description}}</p>
+      </div>
+    </div>
+    <app-menu></app-menu>
+  </div>
+  <button class="carousel-control-prev" type="button" (click)="prevItem()">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" (click)="nextItem()">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </button>
+  <ol class="carousel-indicators">
+    <li *ngFor="let item of items; let i = index" [class.active]="currentIndex === i" (click)="selectItem(i)"></li>
+  </ol>
+</div> -->
+
