--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,25 +10,11 @@
       </div>
     </div>
     <div class="cards">
-      <div class="card cardService">
+      <div class="card cardService" *ngFor="let item of itemsCardService; let i = index">
         <div class="card-body">
-          <img src="../../../assets/images/iconExemple.png" class="imgService">
-          <h3 class="card-title">Nomenclatura do Serviço</h3>
-          <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-        </div>
-      </div>
-      <div class="card cardService">
-        <div class="card-body">
-          <img src="../../../assets/images/iconExemple.png" class="imgService">
-          <h3 class="card-title">Nomenclatura do Serviço</h3>
-          <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-        </div>
-      </div>
-      <div class="card cardService">
-        <div class="card-body">
-          <img src="../../../assets/images/iconExemple.png" class="imgService">
-          <h3 class="card-title">Nomenclatura do Serviço</h3>
-          <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+          <img [src]="item.imageService" [alt]="item.titleService" class="imgService">
+          <h3 class="card-title">{{item.titleService}}</h3>
+          <p class="card-text">{{item.description}}</p>
         </div>
       </div>
     </div>
@@ -53,46 +39,13 @@
   </div>
 </div>
 <div class="imgCards">
-  <div class="imgCase ">
-    <img src="../../../assets/images/nubankCase.png" alt="Case Nubank" class="imgCase__cases">
+  <div class="imgCase" *ngFor="let item of itemsCaseSucess; let i = index">
+    <img [src]="item.imageCase" [alt]="item.titleCase" class="imgCase__cases">
     <div class="hoverText">
-      <img src="../../../assets/images/nu_Hover.png" alt="NuBank" class="hoverText__caseImg">
-      <img src="../../../assets/images/solvo_white.png" alt="Solvo" class="hoverText__caseImg">
+      <img [src]="item.imagePartner1" [alt]="item.partnerCase1" class="hoverText__caseImg">
+      <img [src]="item.imagePartner2" [alt]="item.partnerCase2" class="hoverText__caseImg">
       <p class="hoverText__yearHover">2023</p>
-      <a href="" class="hoverText__linkCase">
-        <p class="">Ver Case</p>
-      </a>
-    </div>
-  </div>
-  <div class="imgCase ">
-    <img src="../../../assets/images/vivoCase.png" alt="Case Vivo" class="imgCase__cases">
-    <div class="hoverText">
-      <img src="../../../assets/images/vivo_Hover.png" alt="Vivo Brasil" class="hoverText__caseImg">
-      <img src="../../../assets/images/wib_white.png" alt="Wib" class="hoverText__caseImg">
-      <p class="hoverText__yearHover">2023</p>
-      <a href="" class="hoverText__linkCase">
-        <p class="">Ver Case</p>
-      </a>
-    </div>
-  </div>
-  <div class="imgCase ">
-    <img src="../../../assets/images/ifoodCase.png" alt="Case Ifood" class="imgCase__cases">
-    <div class="hoverText">
-      <img src="../../../assets/images/ifood_Hover.png" alt="IFood" class="hoverText__caseImg">
-      <img src="../../../assets/images/wib_white.png" alt="Wib" class="hoverText__caseImg">
-      <p class="hoverText__yearHover">2023</p>
-      <a href="" class="hoverText__linkCase">
-        <p class="">Ver Case</p>
-      </a>
-    </div>
-  </div>
-  <div class="imgCase ">
-    <img src="../../../assets/images/aleloCase.png" alt="Case Alelo" class="imgCase__cases">
-    <div class="hoverText">
-      <img src="../../../assets/images/alelo_Hover.png" alt="Alelo" class="hoverText__caseImg">
-      <img src="../../../assets/images/solvo_white.png" alt="Solvo" class="hoverText__caseImg">
-      <p class="hoverText__yearHover">2023</p>
-      <a href="" class="hoverText__linkCase">
+      <a [routerLink]="item.case" class="hoverText__linkCase">
         <p class="">Ver Case</p>
       </a>
     </div>
@@ -114,11 +67,11 @@
         <p>Curadoria de <span class="bold">parceiros reconhecidos.</span></p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-4 ms-auto">
+    <div class="row d-flex">
+      <div class="col-md-4 col-12 ms-auto mt-lg-0 mt-5">
         <img src="../../../assets/images/solace.png" alt="...." class="">
       </div>
-      <div class="col-4 me-auto">
+      <div class="col-md-4 col-12 me-auto mt-lg-0 mt-5">
         <p class="parceirosTxt">
           <span class="bold">Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA)</span>
           em ambientes de nuvem híbrida, multinuvem e IoT.
@@ -132,6 +85,8 @@
     </div>
   </div>
 </div>
+
+
 <!-- /PARCEIROS -->
 <!-- CAROUSEL PARCEIROS TESTE -->
 <!--
