--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -8,92 +8,13 @@
   </h3>
 
   <div class="row">
-    <div class="col-lg-3 col-xs-12">
+    <div class="col-lg-3 col-xs-12" *ngFor="let servico of servicos">
       <div class="cards">
         <div class="card cardService">
           <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-xs-12">
-      <div class="cards">
-        <div class="card cardService">
-          <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-xs-12">
-      <div class="cards">
-        <div class="card cardService">
-          <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-xs-12">
-      <div class="cards">
-        <div class="card cardService">
-          <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-3 col-xs-12">
-      <div class="cards">
-        <div class="card cardService">
-          <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-xs-12">
-      <div class="cards">
-        <div class="card cardService">
-          <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-xs-12">
-      <div class="cards">
-        <div class="card cardService">
-          <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-xs-12">
-      <div class="cards">
-        <div class="card cardService">
-          <div class="card-body">
-            <img src="../../../assets/images/iconExemple.png" class="imgService">
-            <h3 class="card-title">Nomenclatura do Serviço</h3>
-            <p class="card-text">Breve descritivo sobre o serviço ou exemplos de aplicações.</p>
+            <img [src]="servico.img" class="imgService">
+            <h3 class="card-title">{{ servico.nome }}</h3>
+            <p class="card-text">{{ servico.descricao }}</p>
           </div>
         </div>
       </div>
