--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -198,7 +198,7 @@
   </button>
 </div> -->
 <!-- /CAROUSEL PARCEIROS TESTE -->
-<app-carouselTest [items]="[  
+<app-slider [items]="[  
 { 
   id: 1,
   imgUrl: '../../../../assets/images/solace.png',
@@ -221,7 +221,7 @@
   title: 'A Wib API oferece visibilidade contínua em todo o ciclo de vida da API',
   text: 'desde o código até o teste e a produção.'
 }
-]"></app-carouselTest>
+]"></app-slider>
 
 
 
