Fix Rota de Erro, Home Slider e Pag Inscricao

--- a/src/app/components/shared/carousel/carousel.component.html
+++ b/src/app/components/shared/carousel/carousel.component.html
@@ -36,9 +36,9 @@
     <div class="carousel-item">
       <img src="../../../assets/images/banner_2.png" class="d-block w-100" alt="...">
       <div class="position-absolute top-50 start-50 translate-middle">
-        <h1>Imagem</h1>
+        <h1 class="text-center">Imagem</h1>
         <h5 class="carousel__subTitle text-center mx-auto">Expertise em soluções digitais que transformam negócios.</h5>
-        <div class="btnDiv mx-auto my-5">
+        <div class="btnDiv my-5">
           <button class="btnDark">
             <p class="btnText">Acessar Case</p>
           </button>
