--- a/src/app/components/shared/slider/slider.component.scss
+++ b/src/app/components/shared/slider/slider.component.scss
@@ -5,7 +5,7 @@
     font-size: 24px;
     line-height: 150%;
     color: #B6B6B6;
-  
+
     .bold{
       color: #001322;
     }
@@ -23,5 +23,9 @@
 
 .text-container{
     width: 25%;
+}
+
+.img-carousel{
+  width: auto!important;
 }
 
