--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,17 +1,18 @@
 <app-menu></app-menu>
-<div class="container">
+<div class="container mt-5">
   <app-breadcrumb></app-breadcrumb>
-  <div class="error">
+  <div class="error mt-5">
     <div class="error__title">
+      <p>404</p>
     </div>
-    <div class="error__subTitle">
+    <div class="error__subTitle mb-5">
+      <p>Página não encontrada.</p>
+    </div>
+    <!-- <div class="searchForm">
 
-    </div>
-    <div class="searchForm">
-
-    </div>
+    </div> -->
   </div>
 </div>
 
 
-<app-footer></app-footer>
+<app-footer style="position:absolute; bottom:0;" class="w-100"></app-footer>
