--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="cards">
-      <div class="card cardService" *ngFor="let item of itemsCardService; let i = index">
+      <div class="card cardService mb-lg-0 mb-5 justify-content-center" *ngFor="let item of itemsCardService; let i = index">
         <div class="card-body">
           <img [src]="item.imageService" [alt]="item.titleService" class="imgService">
           <h3 class="card-title">{{item.titleService}}</h3>
@@ -67,7 +67,7 @@
         <p>Curadoria de <span class="bold">parceiros reconhecidos.</span></p>
       </div>
     </div>
-    <div class="row d-flex">
+    <!-- <div class="row d-flex">
       <div class="col-md-4 col-12 ms-auto mt-lg-0 mt-5">
         <img src="../../../assets/images/solace.png" alt="...." class="">
       </div>
@@ -77,99 +77,24 @@
           em ambientes de nuvem híbrida, multinuvem e IoT.
         </p>
       </div>
-    </div>
-    <div class="btnDiv mx-auto my-5">
-      <button class="btnLight">
-        <p class="btnText">Exibir todos</p>
-      </button>
-    </div>
-  </div>
-</div>
-
-
-<!-- /PARCEIROS -->
-<!-- CAROUSEL PARCEIROS TESTE -->
-<!--
-<div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-4 ms-auto">
-            <img src="../../../assets/images/solace.png" alt="Solace Brand" class="">
-          </div>
-          <div class="col-4 me-auto">
-            <p class="parceirosTxt">
-              <span class="bold">Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA)</span>
-              em ambientes de nuvem híbrida, multinuvem e IoT.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-4 ms-auto">
-            <img src="../../../assets/images/solvo.png" alt="Solvo Brand" class="">
-          </div>
-          <div class="col-4 me-auto">
-            <p class="parceirosTxt">
-              <span class="bold">Descubram, priorizem, mitiguem e corrijam automaticamente os riscos </span>
-              de acesso à infraestrutura de nuvem.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-4 ms-auto">
-            <img src="../../../assets/images/wib.png" alt="Wib Brand" class="">
-          </div>
-          <div class="col-4 me-auto">
-            <p class="parceirosTxt">
-              <span class="bold">A Wib API oferece visibilidade contínua em todo o ciclo de vida da API</span>
-              , desde o código até o teste e a produção.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div> -->
-<!-- /CAROUSEL PARCEIROS TESTE -->
-<app-slider [items]="[  
-{ 
+    </div> -->
+    <app-slider [items]="[
+{
   id: '1',
   imgUrl: '../../../../assets/images/solace.png',
   altText: 'Solace Brand',
   title: 'Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA)',
   text: 'em ambientes de nuvem híbrida, multinuvem e IoT.'
 
-},  
-{ 
+},
+{
   id: '2',
   imgUrl: '../../../../assets/images/solvo.png',
   altText: 'Solvo Brand',
   title: 'Descubram, priorizem, mitiguem e corrijam automaticamente os riscos',
-  text: 'de acesso à infraestrutura de nuvem.'  
-},  
-{ 
+  text: 'de acesso à infraestrutura de nuvem.'
+},
+{
   id: '3',
   imgUrl: '../../../../assets/images/wib.png',
   altText: 'Wib Brand',
@@ -177,6 +102,20 @@
   text: 'desde o código até o teste e a produção.'
 }
 ]"></app-slider>
+    <div class="btnDiv mx-auto my-5">
+      <button class="btnLight">
+        <a routerLink="/parceiros" class="text-decoration-none linkColor">
+          <p class="btnText">Exibir todos</p>
+        </a>
+      </button>
+    </div>
+  </div>
+</div>
+
+
+<!-- /PARCEIROS -->
+
+
 
 
 
