--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -36,15 +36,15 @@
 <nav class="navbar bg-dark">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-lg-4 col-12">
         <h4 class="bg-dark__Title">Qualidade</h4>
         <p class="bg-dark__Text">As entregas passam por uma série de validações para que, independente da demanda, nossos clientes possam esperar resultados de excelência.</p>
       </div>
-      <div class="col">
+      <div class="col-lg-4 col-12">
         <h4 class="bg-dark__Title">Parceria</h4>
         <p class="bg-dark__Text">Procuramos sempre por novas tecnologias e ideias na busca permanente de inovação que resulte em geração de valor para o cliente e organização.</p>
       </div>
-      <div class="col">
+      <div class="col-lg-4 col-12">
         <h4 class="bg-dark__Title">Conhecimento</h4>
         <p class="bg-dark__Text">Estimulamos a difusão do conhecimento e implantação das melhores práticas com o objetivo de consolidar  a experiência do time.</p>
       </div>
@@ -75,7 +75,7 @@
   </div>
   <h4 class="vagasTitle">Quer fazer parte?
     <br/>
-    <span>Confira nossas <a href="/vagas">vagas</a>.</span>
+    <span>Confira nossas <a routerLink="/carreira">vagas</a>.</span>
   </h4>
 </div>
 
