--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="text-center text-lg-start bg-sennatech text-muted">
   <section class="d-flex justify-content-center text-start justify-content-lg-between p-4 border-bottom">
     <div class="container d-lg-block">
-      <span class="preFooter">Gostou? <a href="" class="preFooter__link">Fale conosco.</a></span>
+      <span class="preFooter">Gostou? <a routerLink="/contato" class="preFooter__link">Fale conosco.</a></span>
     </div>
   </section>
   <section class="border-bottom">
