--- a/src/app/components/shared/slider/slider.component.html
+++ b/src/app/components/shared/slider/slider.component.html
@@ -1,11 +1,11 @@
 <owl-carousel-o [options]="carouselOptions">
   <ng-container *ngFor="let item of items">
     <ng-template carouselSlide [id]="item.id">
-        <div class="row">
-          <div class="col-4 ms-auto img-container">
-            <img [src]="item.imgUrl" alt="{{item.altText}}" class="img-carousel">
+        <div class="row d-flex">
+          <div class="col-md-4 col-12 ms-auto mt-lg-0 mt-5">
+            <img [src]="item.imgUrl" alt="{{item.altText}}" class="img-carousel  mx-auto">
           </div>
-          <div class="col-4 me-auto text-container">
+          <div class="col-md-4 col-12 me-auto mt-lg-0 mt-5">
             <p class="parceirosTxt">
               <span class="bold">{{item.title}}</span>
               {{item.text}}
