--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -91,9 +91,9 @@ $sennatechColorAlt: #B6B6B6;
 
 .cards{
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
+  // display: flex;
+  // flex-direction: row;
+  // gap: 10px;
   padding: 15px;
 }
 
@@ -110,7 +110,6 @@ $sennatechColorAlt: #B6B6B6;
 .imgService{
   width: auto !important;
   height: auto !important;
-  margin: 0 auto;
   margin-bottom: 20px;
 }
 
