WIP: componente nav como carrossel mobile screen

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -214,10 +214,10 @@ $sennatechColorAlt: #B6B6B6;
     width: 100%;
     transition: 0.5s ease-in-out;
 
-    &:hover{
-      // filter: grayscale(1);
-      // transition: 0.3s ease-in;
-    }
+    // &:hover{
+    //   // filter: grayscale(1);
+    //   // transition: 0.3s ease-in;
+    // }
 
   }
 
