feat: carrossel página sobre no conteudo do nav quando tela mobile

--- a/src/app/pages/sobre/sobre.component.scss
+++ b/src/app/pages/sobre/sobre.component.scss
@@ -63,10 +63,25 @@
   }
 }
 
+.carousel-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: justify;
+  gap: 5px;
+  margin: 20px;
+  padding: 10px 30px;
+}
+
 .bg-dark{
   background-color: #001322 !important;
   @media screen and (min-width:320px) {
     height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   @media screen and (min-width: 992px) {
@@ -93,14 +108,6 @@
     line-height: 150%;
     color: #FFFFFF;
     width: 75%;
-  }
-
-  &__CarouselInfos {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: justify;
   }
 
 }
