--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -8,8 +8,12 @@
         <h1 class="sobreTitle">Somos parceiros das <span>melhores soluções digitais.</span></h1>
       </div>
       <div class="col-lg-6 col-xs-12">
-        <p class="sobreText">Somos uma equipe de desenvolvedores, gerentes de projetos e analistas de sistemas, trabalhando com valores compartilhados e com um único objetivo: ajudar negócios imersos no meio digital a resolverem problemas reais.</p>
-        <p class="sobreText">Priorizamos a seleção dos melhores parceiros de tecnologia para manter o nível de excelência das entregas e oferecer alternativas que atendam diferentes demandas, apoiando o crescimento e melhoria contínua dos processos.</p>
+        <p class="sobreText">Somos uma equipe de desenvolvedores, gerentes de projetos e analistas de sistemas,
+          trabalhando com valores compartilhados e com um único objetivo: ajudar negócios imersos no meio digital a
+          resolverem problemas reais.</p>
+        <p class="sobreText">Priorizamos a seleção dos melhores parceiros de tecnologia para manter o nível de
+          excelência das entregas e oferecer alternativas que atendam diferentes demandas, apoiando o crescimento e
+          melhoria contínua dos processos.</p>
       </div>
     </div>
   </div>
@@ -33,45 +37,54 @@
   </div>
 </div>
 
-<nav class="navbar bg-dark">
-  <div class="container">
-    <div class="row">
-        <div *ngIf="isMobileScreen(); else desktopScreen">
-          <owl-carousel-o [options]="carouselOptions">
-            <ng-container *ngFor="let item of items">
-              <ng-template carouselSlide [id]="item.id">
-                <div class="bg-dark__CarouselInfos">
-                  <h4 class="bg-dark__Title">{{item.title}}</h4>
-                  <p class="bg-dark__Text">{{item.text}}</p>
-                </div>
-              </ng-template>
-            </ng-container>
-          </owl-carousel-o>
-        </div>
-        <ng-template #desktopScreen>
-          <ng-container *ngFor="let item of items">
-            <div class="col-lg-4 col-12">
-              <h4 class="bg-dark__Title">{{item.title}}</h4>
-              <p class="bg-dark__Text">{{item.text}}</p>
+<div *ngIf="isMobileScreen(); then mobileScreen else desktopScreen"></div>
+
+<ng-template #mobileScreen>
+  <nav class="bg-dark">
+    <div class="container">
+      <owl-carousel-o [options]="carouselOptions">
+        <ng-container *ngFor="let item of items">
+          <ng-template carouselSlide [id]="item.id">
+            <div class="row">
+              <div class="carousel-content">
+                <h4 class="bg-dark__Title">{{item.title}}</h4>
+                <p class="bg-dark__Text">{{item.text}}</p>
+              </div>
             </div>
-          </ng-container>
-        </ng-template>
+          </ng-template>
+        </ng-container>
+      </owl-carousel-o>
+    </div>
+  </nav>
+</ng-template>
+
+<ng-template #desktopScreen>
+  <nav class="navbar bg-dark">
+    <div class="container">
+      <div class="row">
+        <ng-container *ngFor="let item of items">
+          <div class="col-lg-4 col-12">
+            <h4 class="bg-dark__Title">{{item.title}}</h4>
+            <p class="bg-dark__Text">{{item.text}}</p>
+          </div>
+        </ng-container>
       </div>
-  </div>
-</nav>
+    </div>
+  </nav>
+</ng-template>
 
 <div class="container">
   <h3 class="certTitle">Mais que consultores:
-    <br/>
+    <br />
     <span>certificados em experiência.</span>
   </h3>
   <div class="certifications">
     <div class="row">
       <div class="col">
         <img src="../../../assets/images/certificado2015.png" alt="">
-          <a href="#1">
-            <p class="certText">Ver certificado<i class="bi bi-arrow-up-right"></i></p>
-          </a>
+        <a href="#1">
+          <p class="certText">Ver certificado<i class="bi bi-arrow-up-right"></i></p>
+        </a>
       </div>
       <div class="col">
         <img src="../../../assets/images/certificado2013.png" alt="">
@@ -82,7 +95,7 @@
     </div>
   </div>
   <h4 class="vagasTitle">Quer fazer parte?
-    <br/>
+    <br />
     <span>Confira nossas <a routerLink="/carreira">vagas</a>.</span>
   </h4>
 </div>
