fix: corrigi text-aling texto nav content

--- a/src/app/pages/sobre/sobre.component.scss
+++ b/src/app/pages/sobre/sobre.component.scss
@@ -69,7 +69,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  text-align: justify;
+  text-align: left;
   gap: 5px;
   margin: 20px;
   padding: 10px 30px;
